related articles h2 spacing issue

--- a/blog/blocks/related-articles/related-articles.css
+++ b/blog/blocks/related-articles/related-articles.css
@@ -12,6 +12,7 @@
     color: var(--primary-black);
     letter-spacing: var(--letter-spacing-02-em);
     text-transform: uppercase;
+    margin: unset;
 }
 
 .related-articles[data-block-status="loaded"] {
